Fix alignment css

--- a/modules/weko-admin/weko_admin/static/css/weko_admin/styles.css
+++ b/modules/weko-admin/weko_admin/static/css/weko_admin/styles.css
@@ -29,3 +29,7 @@
 .page > li:disabled {
   cursor: pointer;
 }
+.margin_0{
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
